cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
build-type:    Simple

common warnings
    ghc-options: -Wall

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Util,
    build-depends:
        base ^>=4.20.2.0,
        containers ^>= 0.7,
        advent-of-code-api ^>=0.2.10.0,
        text ^>=2.1.3,
        split ^>=0.2.5,
        array ^>=0.5.8.0,
    hs-source-dirs:   app
    default-language: GHC2024
