cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
build-type:    Simple

common warnings
    ghc-options: -Wall

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Day9,
        Day10,
        Day11,
        Day12,
        Util,
    build-depends:
        advent-of-code-api ^>=0.2.10.0,
        array ^>=0.5.8.0,
        base ^>=4.20.2.0,
        containers ^>= 0.7,
        directory ^>= 1.3.8.5,
        process ^>=1.6.26.1,
        split ^>=0.2.5,
        text ^>=2.1.3,
    hs-source-dirs:   app
    default-language: GHC2024
